mdapipkg/unpackaged/objects/Loyalty_Program_Reward__c.object
<CustomObject>
    <fields>
        <fullName>Loyalty_Program__c</fullName>
        <label>Loyalty Program</label>
        <referenceTo>Loyalty_Program__c</referenceTo>
        <relationshipLabel>Loyalty Program Rewards</relationshipLabel>
        <relationshipName>Loyalty_Program_Rewards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Minimum_Points__c</fullName>
        <label>Minimum Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odoo_ID__c</fullName>
        <externalId>true</externalId>
        <label>Odoo ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point_Cost__c</fullName>
        <label>Point Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Loyalty Program Rewards</relationshipLabel>
        <relationshipName>Loyalty_Program_Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loyalty Program Reward</label>
    <nameField>
        <label>Loyalty Program  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Program Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>